--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 Design of Computer Programs (CS212 @Udacity) assignments
+--------------------------------------------------------
 
-This is a private repository with programming assignments and code snippets that were done by Borys Zibrov (@borowis), that is by me.
-For more details, please, visit the https://www.udacity.com/course/cs212
+This is a private repository with programming assignments and code snippets 
+that were done by Borys Zibrov (@borowis), that is by me.
+
+For more details, please, visit the [course website](https://www.udacity.com/course/cs212)
